--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<body>
 		<div id="app"></div>
 
-		<script type="module" src="./js/app.js"></script>
+		<script type="module" src=".dist/js/app.js"></script>
 	</body>
 </html>
